<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    >

    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/back"
            android:contentDescription="@string/listProduct_ImageDescrip" />

        <RelativeLayout
            android:layout_below="@+id/image_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            >

            <TextView
                android:id="@+id/nameFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listProduct_TextName"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listProduct_TextTime"
                android:layout_alignParentEnd="true"
                android:textSize="17sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/categoryFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lisView_TextCategory"
                android:layout_below="@+id/nameFood"/>

            <TextView
                android:id="@+id/dollarSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listProduct_TextDollar"
                android:layout_marginEnd="27dp"
                android:layout_below="@+id/nameFood"
                android:layout_alignParentEnd="true"
                />

            <TextView
                android:id="@+id/priceFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listProduct_TextPrice"
                android:layout_below="@+id/nameFood"
                android:layout_alignParentEnd="true"
                />


        </RelativeLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>